--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@
     <div class="big-header">
       <div class="header-top">
         <div class="logo order-1">
-          <a href="index.html">
+          <a href="index.html" aria-label="logo">
             <img src="../assets/image/logo.png" alt="logo" />
           </a>
         </div>
@@ -78,7 +78,7 @@
     <div class="swiper compny-contact-swiper container">
       <div class="swiper-wrapper flex items-center">
         <div class="swiper-slide">
-          <a href="" aria-label="Advisor" class="swiper-slider-items">
+          <a href="#" aria-label="Advisor" class="swiper-slider-items">
             <img src="../assets/image/tripadvisor.png" alt="tripadvisor" class="mb-10" />
             <p>111 REVIEWS</p>
             <div class="flex items-center gap-10">
@@ -94,7 +94,7 @@
           </a>
         </div>
         <div class="swiper-slide">
-          <a href="" aria-label="Advisor" class="swiper-slider-items">
+          <a href="#" aria-label="Advisor" class="swiper-slider-items">
             <img src="../assets/image/facebook.png" alt="facebook" class="mb-10" />
             <p>18 REVIEWS</p>
             <div class="flex items-center gap-10">
@@ -110,12 +110,12 @@
           </a>
         </div>
         <div class="swiper-slide">
-          <a href="" aria-label="Advisor" class="swiper-slider-items">
+          <a href="#" aria-label="Advisor" class="swiper-slider-items">
             <img src="../assets/image/card.png" alt="card" />
           </a>
         </div>
         <div class="swiper-slide">
-          <a href="" aria-label="Advisor" class="swiper-slider-items">
+          <a href="#" aria-label="Advisor" class="swiper-slider-items">
             <img src="../assets/image/google.png" alt="google" class="mb-10" />
             <p>224 REVIEWS</p>
             <div class="flex items-center gap-10">
@@ -131,7 +131,7 @@
           </a>
         </div>
         <div class="swiper-slide">
-          <a href="" aria-label="Advisor" class="swiper-slider-items">
+          <a href="#" aria-label="Advisor" class="swiper-slider-items">
             <img src="../assets/image/yelp.png" alt="yelp" class="mb-10" />
             <p>13 REVIEWS</p>
             <div class="flex items-center gap-10">
@@ -156,13 +156,13 @@
     <div class="title w-full py-30 xl:mt-55">
       <h2>most populer excursions</h2>
     </div>
-    <div class="swiper populer-excursions-swiper container xl:mt-55 ">
+    <div class="swiper populer-excursions-swiper container xl:mt-55">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="img">
             <a href="#"><img src="../assets/image/image(1).png" alt="image" width="100%" height="250" /></a>
             <div class="banner">
-              <p>Most populer tour!</p>
+              <a href="#" aria-label="Most populer tour!">Most populer tour!</a>
             </div>
           </div>
           <div class="swiper-slide-content">
@@ -194,8 +194,8 @@
               </li>
             </ul>
             <div class="flex gap-8 sm:gap-10 mt-5">
-              <a href="" class="btn-more">learn more</a>
-              <a href="" class="btn-book">book now</a>
+              <a href="#" aria-label="learn more" class="btn-more">learn more</a>
+              <a href="#" aria-label="book now" class="btn-book">book now</a>
             </div>
           </div>
         </div>
@@ -232,8 +232,8 @@
               </li>
             </ul>
             <div class="flex gap-10 mt-5">
-              <a href="" class="btn-more">learn more</a>
-              <a href="" class="btn-book">book now</a>
+              <a href="#" aria-label="learn more" class="btn-more">learn more</a>
+              <a href="#" aria-label="book now" class="btn-book">book now</a>
             </div>
           </div>
         </div>
@@ -241,7 +241,7 @@
           <div class="img">
             <a href=""><img src="../assets/image/image(3).png" alt="image" width="100%" height="250" /></a>
             <div class="banner">
-              <p>Includes a 2 hour stop in Friday Harbor!</p>
+              <a href="#" aria-label="Includes a 2 hour stop in Friday Harbor!">Includes a 2 hour stop in Friday Harbor!</a>
             </div>
           </div>
           <div class="swiper-slide-content">
@@ -273,8 +273,8 @@
               </li>
             </ul>
             <div class="flex gap-10 mt-5">
-              <a href="" class="btn-more">learn more</a>
-              <a href="" class="btn-book">book now</a>
+              <a href="#" aria-label="learn more" class="btn-more">learn more</a>
+              <a href="#" aria-label="book now" class="btn-book">book now</a>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
               </li>
             </ul>
             <div class="flex gap-10 mt-5">
-              <a href="" class="btn-more px-70 lg:px-90 xl:px-110">learn more</a>
+              <a href="#" aria-label="learn more" class="btn-more px-70 lg:px-90 xl:px-110">learn more</a>
             </div>
           </div>
         </div>
@@ -342,7 +342,7 @@
         </p>
       </div>
       <div class="mt-20">
-        <a href="#" class="btn-more">Read more about our boats</a>
+        <a href="#" aria-label="read more" class="btn-more">Read more about our boats</a>
       </div>
     </div>
     <div class="boat-img">
@@ -354,11 +354,11 @@
   <!-- customer review -->
   <section class="cursomer-review p-4">
     <div class="title title-blue">
-      <p>customer review</p>
+      <h2>customer review</h2>
     </div>
 
     <div class="all-review">
-      <div class="tab-slid ">
+      <div class="tab-slid">
         <div class="tan-slid-item">
           <button class="tab-button" data-tab="tab1">
             <div class="content">
@@ -399,7 +399,7 @@
                 <span class="text-black text-12 font-Prompt">(308)</span>
               </div>
             </div>
-            <div class="my-3"><a href="" class="btn-book">writea review</a></div>
+            <div class="my-3"><a href="#" aria-label="writea review" class="btn-book">writea review</a></div>
           </div>
         </div>
         <div class="tab-content hidden" id="tab2">
@@ -421,7 +421,7 @@
                 <span class="text-black text-12 font-Prompt">(66)</span>
               </div>
             </div>
-            <div class="my-3"><a href="" class="btn-book">review as on google</a></div>
+            <div class="my-3"><a href="#" aria-label="review" class="btn-book">review as on google</a></div>
           </div>
         </div>
         <div class="tab-content hidden" id="tab3">
@@ -443,7 +443,7 @@
                 <span class="text-black text-12 font-Prompt">(20)</span>
               </div>
             </div>
-            <div class="my-3"><a href="#" class="btn-book">review as on tripadvisor</a></div>
+            <div class="my-3"><a href="#" aria-label="review" class="btn-book">review as on tripadvisor</a></div>
           </div>
         </div>
       </div>
@@ -462,7 +462,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="#" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -479,7 +479,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="#" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -496,7 +496,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="#" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -513,7 +513,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="#" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -530,7 +530,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="#" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -547,7 +547,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -564,7 +564,7 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
@@ -581,14 +581,14 @@
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
-        <a href="" class="review-read">Read more</a>
+        <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
       </div>
     </div>
     <div class="review-load">
-      <a href="" class="review-load-btn">load more</a>
+      <a href="#" aria-label="load more" class="review-load-btn">load more</a>
     </div>
   </section>
   <!-- customer review end -->
@@ -614,7 +614,7 @@
         <h2>Adventure is closer than you think!</h2>
       </div>
       <div class="md:px-36">
-        <a href="#" class="map-btn">get directions <img src="../assets/image/more.png" alt="more"/></a>
+        <a href="#" aria-label="get directions" class="map-btn">get directions <img src="../assets/image/more.png" alt="more"/></a>
       </div>
     </div>
   </section>
@@ -640,16 +640,16 @@
     <div class="title-adventure">
       <h2>adventure awaits!</h2>
     </div>
-    <a href="#" class="btn-book">book now</a>
+    <a href="#" aria-label="book now" class="btn-book">book now</a>
   </section>
   <!-- adventure awaits end -->
 
   <!-- footer -->
   <footer class="footer">
-    <div class=" grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-60">
+    <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-60">
       <div class="footer-menu">
         <div class="mb-55">
-          <img src="../assets/image/logo.png" alt="logo" />
+          <a href="index.html" aria-label="logo"><img src="../assets/image/logo.png" alt="logo" /></a>
         </div>
         <div>
           <div class="content uppercase text-white">
@@ -657,16 +657,16 @@
           </div>
           <ul class="flex items-center gap-40 mt-14">
             <li>
-              <a href="#"><img src="../assets/image/instagram icon.png" alt="instagram" /></a>
+              <a href="#" aria-label="instagram"><img src="../assets/image/instagram icon.png" alt="instagram" /></a>
             </li>
             <li>
-              <a href="#"><img src="../assets/image/youtube icon.png" alt="youtube" /></a>
+              <a href="#" aria-label="youtube"><img src="../assets/image/youtube icon.png" alt="youtube" /></a>
             </li>
             <li>
-              <a href="#"><img src="../assets/image/facebook icon.png" alt="facbook" /></a>
+              <a href="#" aria-label="facbook"><img src="../assets/image/facebook icon.png" alt="facbook" /></a>
             </li>
             <li>
-              <a href="#"><img src="../assets/image/tripadvisor icon.png" alt="tripadvisor" /></a>
+              <a href="#" aria-label="tripadvisor"><img src="../assets/image/tripadvisor icon.png" alt="tripadvisor" /></a>
             </li>
           </ul>
         </div>
@@ -689,12 +689,12 @@
         </div>
         <div class="footer-dropdown">
           <ul>
-            <li><a href="#">Whale and Wildlife Adventure – Zodiac Boat</a></li>
-            <li><a href="#">Custom Private Charters</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Employment Opportunities</a></li>
-            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#" aria-label="Whale and Wildlife Adventure – Zodiac Boat">Whale and Wildlife Adventure – Zodiac Boat</a></li>
+            <li><a href="#" aria-label="Custom Private Charters">Custom Private Charters</a></li>
+            <li><a href="#" aria-label="About Us">About Us</a></li>
+            <li><a href="#" aria-label="Contact">Contact</a></li>
+            <li><a href="#" aria-label="Employment Opportunities">Employment Opportunities</a></li>
+            <li><a href="#" aria-label="Privacy Policy">Privacy Policy</a></li>
           </ul>
         </div>
       </div>
@@ -717,7 +717,7 @@
       </div>
     </div>
     <div class="copy-right">
-      <p>© Copyright 2025 <a href="#">Blue Kingdom Whale & Wildlife Tours</a></p>
+      <p>© Copyright 2025 <a href="#" aria-label="Blue Kingdom Whale & Wildlife Tours">Blue Kingdom Whale & Wildlife Tours</a></p>
     </div>
   </footer>
   <!-- footer end -->
