--- a/pages/index.html
+++ b/pages/index.html
@@ -34,7 +34,7 @@
       <div class="header-top">
         <div class="logo order-1">
           <a href="index.html" aria-label="logo">
-            <img src="../assets/image/logo.png" alt="logo" />
+            <img src="../assets/image/logo.png" alt="logo" width="170" height="80.2" />
           </a>
         </div>
         <div class="navbar" id="navbar">
@@ -63,10 +63,10 @@
             WILD</h1>
         </div>
         <div class="flex xl:flex-col items-center justify-evenly h-200 w-full xl:w-auto">
-          <a href="#" aria-label="insta"><img src="../assets/image/insta.png" alt="instagram" /></a>
-          <a href="#" aria-label="facbook"><img src="../assets/image/facebook-icon.png" alt="facebook" /></a>
-          <a href="#" aria-label="youtube"><img src="../assets/image/youtube.png" alt="youtube" /></a>
-          <a href="#" aria-label="tripadvisor"><img src="../assets/image/tripadvisor -icon.png" alt="tripadvisor" /></a>
+          <a href="#" aria-label="insta"><img src="../assets/image/insta.png" width="23.33" height="23.33" alt="instagram" /></a>
+          <a href="#" aria-label="facbook"><img src="../assets/image/facebook-icon.png" width="12.88" height="23.33" alt="facebook" /></a>
+          <a href="#" aria-label="youtube"><img src="../assets/image/youtube.png" width="23.66" height="16.67" alt="youtube" /></a>
+          <a href="#" aria-label="tripadvisor"><img src="../assets/image/tripadvisor -icon.png" width="26.17" height="16.67" alt="tripadvisor" /></a>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
       <div class="swiper-wrapper flex items-center">
         <div class="swiper-slide">
           <a href="#" aria-label="Advisor" class="swiper-slider-items">
-            <img src="../assets/image/tripadvisor.png" alt="tripadvisor" class="mb-10" />
+            <img src="../assets/image/tripadvisor.png" width="180" height="40" alt="tripadvisor" class="mb-10" />
             <p>111 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
@@ -95,7 +95,7 @@
         </div>
         <div class="swiper-slide">
           <a href="#" aria-label="Advisor" class="swiper-slider-items">
-            <img src="../assets/image/facebook.png" alt="facebook" class="mb-10" />
+            <img src="../assets/image/facebook.png" width="180" height="40" alt="facebook" class="mb-10" />
             <p>18 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
@@ -111,12 +111,12 @@
         </div>
         <div class="swiper-slide">
           <a href="#" aria-label="Advisor" class="swiper-slider-items">
-            <img src="../assets/image/card.png" alt="card" />
+            <img src="../assets/image/card.png" alt="card" width="120" height="140.45" />
           </a>
         </div>
         <div class="swiper-slide">
           <a href="#" aria-label="Advisor" class="swiper-slider-items">
-            <img src="../assets/image/google.png" alt="google" class="mb-10" />
+            <img src="../assets/image/google.png" alt="google" width="122.15" height="40" class="mb-10" />
             <p>224 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
@@ -132,7 +132,7 @@
         </div>
         <div class="swiper-slide">
           <a href="#" aria-label="Advisor" class="swiper-slider-items">
-            <img src="../assets/image/yelp.png" alt="yelp" class="mb-10" />
+            <img src="../assets/image/yelp.png" alt="yelp" width="78.2" height="40" class="mb-10" />
             <p>13 REVIEWS</p>
             <div class="flex items-center gap-10">
               <span class="text-red font-700 text-20">5.0</span>
@@ -201,11 +201,11 @@
         </div>
         <div class="swiper-slide">
           <div class="img">
-            <a href=""><img src="../assets/image/image(2).png" alt="image" width="100%" height="250" /></a>
+            <a href="#"><img src="../assets/image/image(2).png" alt="image" width="100%" height="250" /></a>
           </div>
           <div class="swiper-slide-content">
             <div class="title-blue-card">
-              <a href="">
+              <a href="#">
                 <h3>Whale and Wildlife<br>
                   Adventure - Semi<br>
                   Covered Boat</h3>
@@ -321,7 +321,7 @@
       <div class="swiper-pagination"></div>
     </div>
 
-    <img src="../assets/image/wave.png" alt="wave" class="absolute bottom-0 w-screen" />
+    <img src="../assets/image/wave.png" alt="wave" width="100%" height="auto" class="absolute bottom-0 w-screen" />
   </section>
   <!-- populer-excursions end -->
 
@@ -367,14 +367,14 @@
             <span class="text-blue font-700">50</span>
           </button>
           <button class="tab-button" data-tab="tab2">
-            <img src="../assets/image/bi_google.png" alt="google">
+            <img src="../assets/image/bi_google.png" alt="google" width="20" height="20">
             <div class="content">
               <p>Google </p>
             </div>
             <span class="text-blue font-700">5.0</span>
           </button>
           <button class="tab-button" data-tab="tab3">
-            <img src="../assets/image/Group.png" alt="tripadvisor">
+            <img src="../assets/image/Group.png" alt="tripadvisor" width="20" height="20">
             <div class="content">
               <p>Tripadvisor</p>
             </div>
@@ -406,7 +406,7 @@
           <div class="md:flex justify-between items-center">
             <div class="tab-content-1">
               <div class="tab-title flex">
-                <img src="../assets/image/google.png" alt="google">
+                <img src="../assets/image/google.png" alt="google" width="122.15" height="40">
                 <h4>Reviews</h4>
               </div>
               <div class="flex items-center gap-10">
@@ -428,7 +428,7 @@
           <div class="md:flex justify-between items-center">
             <div class="tab-content-1">
               <div class="tab-title">
-                <img src="../assets/image/tripadvisor.png" alt="tripadvisor">
+                <img src="../assets/image/tripadvisor.png" alt="tripadvisor" width="180" height="40">
                 <h4>Reviews</h4>
               </div>
               <div class="flex items-center gap-10">
@@ -464,7 +464,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden sm:block">
@@ -481,7 +481,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden lg:block">
@@ -498,7 +498,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden xl:block">
@@ -515,7 +515,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden xl:block">
@@ -532,7 +532,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden xl:block">
@@ -549,7 +549,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden xl:block">
@@ -566,7 +566,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
       <div class="reviews hidden xl:block">
@@ -583,7 +583,7 @@
         </div>
         <a href="#" aria-label="read more" class="review-read">Read more</a>
         <div class="mt-5">
-          <img src="../assets/image/Postedon.png" alt="Postedon">
+          <img src="../assets/image/Postedon.png" alt="Postedon" width="127" height="42">
         </div>
       </div>
     </div>
@@ -614,7 +614,7 @@
         <h2>Adventure is closer than you think!</h2>
       </div>
       <div class="md:px-36">
-        <a href="#" aria-label="get directions" class="map-btn">get directions <img src="../assets/image/more.png" alt="more"/></a>
+        <a href="#" aria-label="get directions" class="map-btn">get directions <img src="../assets/image/more.png" alt="more" width="12" height="12.73"/></a>
       </div>
     </div>
   </section>
@@ -648,8 +648,8 @@
   <footer class="footer">
     <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-60">
       <div class="footer-menu">
-        <div class="mb-55">
-          <a href="index.html" aria-label="logo"><img src="../assets/image/logo.png" alt="logo" /></a>
+        <div class="logo mb-55">
+          <a href="index.html" aria-label="logo"><img src="../assets/image/logo.png" alt="logo" width="212" height="100"/></a>
         </div>
         <div>
           <div class="content uppercase text-white">
@@ -657,16 +657,16 @@
           </div>
           <ul class="flex items-center gap-40 mt-14">
             <li>
-              <a href="#" aria-label="instagram"><img src="../assets/image/instagram icon.png" alt="instagram" /></a>
+              <a href="#" aria-label="instagram"><img src="../assets/image/instagram icon.png" width="23.92" height="23.92" alt="instagram" /></a>
             </li>
             <li>
-              <a href="#" aria-label="youtube"><img src="../assets/image/youtube icon.png" alt="youtube" /></a>
+              <a href="#" aria-label="facbook"><img src="../assets/image/facebook icon.png" width="12.88" height="23.33" alt="facbook" /></a>
             </li>
             <li>
-              <a href="#" aria-label="facbook"><img src="../assets/image/facebook icon.png" alt="facbook" /></a>
+              <a href="#" aria-label="youtube"><img src="../assets/image/youtube icon.png" width="23.66" height="16.67" alt="youtube" /></a>
             </li>
             <li>
-              <a href="#" aria-label="tripadvisor"><img src="../assets/image/tripadvisor icon.png" alt="tripadvisor" /></a>
+              <a href="#" aria-label="tripadvisor"><img src="../assets/image/tripadvisor icon.png" width="26.17" height="16.67" alt="tripadvisor" /></a>
             </li>
           </ul>
         </div>
