--- a/pages/index.html
+++ b/pages/index.html
@@ -38,15 +38,15 @@
           </a>
         </div>
         <div class="navbar" id="navbar">
-          <ul>
-            <li><a href="#" aria-label="Tours">Tours</a></li>
-            <li><a href="#" aria-label="Gift Certificates">Gift Certificates</a></li>
-            <li><a href="#" aria-label="Our Boats">Our Boats</a></li>
-            <li><a href="#" aria-label="About Us">About Us</a></li>
-            <li><a href="#" aria-label="Sightings">Sightings</a></li>
-            <li><a href="#" aria-label="Blog">Blog</a></li>
-            <li><a href="#" aria-label="FAQ">FAQ</a></li>
-            <li><a href="#" aria-label="Contact">Contact</a></li>
+          <ul class="menu">
+            <li class="menu-item"><a href="#" aria-label="Tours">Tours</a></li>
+            <li class="menu-item"><a href="#" aria-label="Gift Certificates">Gift Certificates</a></li>
+            <li class="menu-item"><a href="#" aria-label="Our Boats">Our Boats</a></li>
+            <li class="menu-item"><a href="#" aria-label="About Us">About Us</a></li>
+            <li class="menu-item"><a href="#" aria-label="Sightings">Sightings</a></li>
+            <li class="menu-item"><a href="#" aria-label="Blog">Blog</a></li>
+            <li class="menu-item"><a href="#" aria-label="FAQ">FAQ</a></li>
+            <li class="menu-item"><a href="#" aria-label="Contact">Contact</a></li>
           </ul>
         </div>
         <div class="header-book-btn order-3">
@@ -688,13 +688,13 @@
           <h5>quick links</h5>
         </div>
         <div class="footer-dropdown">
-          <ul>
-            <li><a href="#" aria-label="Whale and Wildlife Adventure – Zodiac Boat">Whale and Wildlife Adventure – Zodiac Boat</a></li>
-            <li><a href="#" aria-label="Custom Private Charters">Custom Private Charters</a></li>
-            <li><a href="#" aria-label="About Us">About Us</a></li>
-            <li><a href="#" aria-label="Contact">Contact</a></li>
-            <li><a href="#" aria-label="Employment Opportunities">Employment Opportunities</a></li>
-            <li><a href="#" aria-label="Privacy Policy">Privacy Policy</a></li>
+          <ul class="menu">
+            <li class="menu-item"><a href="#" aria-label="Whale and Wildlife Adventure – Zodiac Boat">Whale and Wildlife Adventure – Zodiac Boat</a></li>
+            <li class="menu-item"><a href="#" aria-label="Custom Private Charters">Custom Private Charters</a></li>
+            <li class="menu-item"><a href="#" aria-label="About Us">About Us</a></li>
+            <li class="menu-item"><a href="#" aria-label="Contact">Contact</a></li>
+            <li class="menu-item"><a href="#" aria-label="Employment Opportunities">Employment Opportunities</a></li>
+            <li class="menu-item"><a href="#" aria-label="Privacy Policy">Privacy Policy</a></li>
           </ul>
         </div>
       </div>
