--- a/pages/index.html
+++ b/pages/index.html
@@ -452,13 +452,13 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-20">
       <div class="reviews">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -469,13 +469,13 @@
       </div>
       <div class="reviews hidden sm:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -486,13 +486,13 @@
       </div>
       <div class="reviews hidden lg:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -503,13 +503,13 @@
       </div>
       <div class="reviews hidden xl:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -520,13 +520,13 @@
       </div>
       <div class="reviews hidden xl:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -537,13 +537,13 @@
       </div>
       <div class="reviews hidden xl:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -554,13 +554,13 @@
       </div>
       <div class="reviews hidden xl:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
@@ -571,13 +571,13 @@
       </div>
       <div class="reviews hidden xl:block">
         <div class="review-date"><span>January 1</span></div>
-        <div class="star">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-          <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
-        </div>
+        <ul class="star">
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+          <li><img src="../assets/image/star icon.png" alt="star" width="20" height="20"></li>
+        </ul>
         <div class="content my-2">
           <p>Lorem ipsum dolor sit amet, Lorem consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
         </div>
